--- a/.github/workflows/release-main.yml
+++ b/.github/workflows/release-main.yml
@@ -11,5 +11,5 @@ jobs:
         id: release-main
         with:
           release-type: node
-          package-name: release-please-action
+          package-name: web
           token: ${{ secrets.PAT }}
