--- a/.github/workflows/release-development.yml
+++ b/.github/workflows/release-development.yml
@@ -12,4 +12,4 @@ jobs:
           release-type: node
           package-name: web
           token: ${{ secrets.PAT }}
-          default-branch: main
+          default-branch: development
